replace get(0) with getFirst()
Signed-off-by: neo <1100909+neowu@users.noreply.github.com>